// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should render FavoriteMovies component 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="min-h-full p-10"
      >
        <div
          class="min-h-full flex flex-col justify-center items-center"
        >
          <h1
            class="text-blue-800 text-center backdrop-blur-xl bg-white/30 p-2"
          >
            Slide to the left to view description
          </h1>
          <h1
            class="text-blue-800 text-center backdrop-blur-xl bg-white/30 p-2"
          >
            Slide to the right to remove
          </h1>
          <img
            class="m-8 flex justify-center items-center rounded-md w-[200px] h-[350px] cursor-pointer"
            draggable="false"
            src="/images/the-garfield-movie.jpg"
            style="transform: none; user-select: none;"
          />
          <img
            class="m-8 flex justify-center items-center rounded-md w-[200px] h-[350px] cursor-pointer"
            draggable="false"
            src="/images/fly-me-to-the-moon.jpg"
            style="transform: none; user-select: none;"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="min-h-full p-10"
    >
      <div
        class="min-h-full flex flex-col justify-center items-center"
      >
        <h1
          class="text-blue-800 text-center backdrop-blur-xl bg-white/30 p-2"
        >
          Slide to the left to view description
        </h1>
        <h1
          class="text-blue-800 text-center backdrop-blur-xl bg-white/30 p-2"
        >
          Slide to the right to remove
        </h1>
        <img
          class="m-8 flex justify-center items-center rounded-md w-[200px] h-[350px] cursor-pointer"
          draggable="false"
          src="/images/the-garfield-movie.jpg"
          style="transform: none; user-select: none;"
        />
        <img
          class="m-8 flex justify-center items-center rounded-md w-[200px] h-[350px] cursor-pointer"
          draggable="false"
          src="/images/fly-me-to-the-moon.jpg"
          style="transform: none; user-select: none;"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`should render FavoriteMovies component without favorite movies 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="min-h-full p-10"
      >
        <div
          class="flex flex-col justify-center items-center text-white text-center"
        >
          <h1
            class="border rounded-md p-2 shadow-xl text-2xl md:text-5xl"
          >
            No favorite movies were found
          </h1>
          <a
            class="mt-10 text-white text-xl hover:text-white hover:underline"
            href="/"
          >
            Add some from the Movie Catalog
          </a>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="min-h-full p-10"
    >
      <div
        class="flex flex-col justify-center items-center text-white text-center"
      >
        <h1
          class="border rounded-md p-2 shadow-xl text-2xl md:text-5xl"
        >
          No favorite movies were found
        </h1>
        <a
          class="mt-10 text-white text-xl hover:text-white hover:underline"
          href="/"
        >
          Add some from the Movie Catalog
        </a>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
